xmlui/src/components-core/optimization/specs/tests.txt
stderr | tests/components-core/scripts-runner/process-state
ment-asgn.test.ts > Process statements - assignments (exp)
> cannot assign to non-defined variable (**=) - sync
Error while executing code: Error: Left value variable (dum
my) not found in the scope.

stderr | tests/components-core/scripts-runner/process-state
ment-asgn.test.ts > Process statements - assignments (exp)
> cannot assign to non-defined variable (*=) - sync
Error while executing code: Error: Left value variable (dum
my) not found in the scope.

stderr | tests/components-core/scripts-runner/process-state
ment-asgn.test.ts > Process statements - assignments (exp)
> cannot assign to non-defined variable (/=) - sync
Error while executing code: Error: Left value variable (dum
my) not found in the scope.

stderr | tests/components-core/scripts-runner/process-state
ment-asgn.test.ts > Process statements - assignments (exp)
> cannot assign to non-defined variable (%=) - sync
Error while executing code: Error: Left value variable (dum
my) not found in the scope.

stderr | tests/components-core/scripts-runner/process-state
ment-asgn.test.ts > Process statements - assignments (exp)
> cannot assign to non-defined variable (<<=) - sync
Error while executing code: Error: Left value variable (dum
my) not found in the scope.

stderr | tests/components-core/scripts-runner/process-state
ment-asgn.test.ts > Process statements - assignments (exp)
> cannot assign to non-defined variable (>>=) - sync
Error while executing code: Error: Left value variable (dum
my) not found in the scope.

stderr | tests/components-core/scripts-runner/process-state
ment-asgn.test.ts > Process statements - assignments (exp)
> cannot assign to non-defined variable (>>>=) - sync
Error while executing code: Error: Left value variable (dum
my) not found in the scope.

stderr | tests/components-core/scripts-runner/process-state
ment-asgn.test.ts > Process statements - assignments (exp)
> cannot assign to non-defined variable (&=) - sync
Error while executing code: Error: Left value variable (dum
my) not found in the scope.

stderr | tests/components-core/scripts-runner/process-state
ment-asgn.test.ts > Process statements - assignments (exp)
> cannot assign to non-defined variable (^=) - sync
Error while executing code: Error: Left value variable (dum
my) not found in the scope.

stderr | tests/components-core/scripts-runner/process-state
ment-asgn.test.ts > Process statements - assignments (exp)
> cannot assign to non-defined variable (|=) - sync
Error while executing code: Error: Left value variable (dum
my) not found in the scope.

stderr | tests/components-core/scripts-runner/process-state
ment-asgn.test.ts > Process statements - assignments (exp)
> cannot assign to non-defined variable (&&=) - sync
Error while executing code: Error: Left value variable (dum
my) not found in the scope.

stderr | tests/components-core/scripts-runner/process-state
ment-asgn.test.ts > Process statements - assignments (exp)
> cannot assign to non-defined variable (||=) - sync
Error while executing code: Error: Left value variable (dum
my) not found in the scope.

stderr | tests/components-core/scripts-runner/process-state
ment-asgn.test.ts > Process statements - assignments (exp)
> cannot assign to non-defined variable (??=) - sync
Error while executing code: Error: Left value variable (dum
my) not found in the scope.

stderr | tests/components-core/scripts-runner/process-state
ment-asgn.test.ts > Process statements - assignments (exp)
> cannot assign to non-defined variable (=) - async
Error while executing code: Error: Left value variable (dum
my) not found in the scope.

stderr | tests/components-core/scripts-runner/process-state
ment-asgn.test.ts > Process statements - assignments (exp)
> cannot assign to non-defined variable (+=) - async
Error while executing code: Error: Left value variable (dum
my) not found in the scope.

stderr | tests/components-core/scripts-runner/process-state
ment-asgn.test.ts > Process statements - assignments (exp)
> cannot assign to non-defined variable (-=) - async
Error while executing code: Error: Left value variable (dum
my) not found in the scope.

stderr | tests/components-core/scripts-runner/process-state
ment-asgn.test.ts > Process statements - assignments (exp)
> cannot assign to non-defined variable (**=) - async
Error while executing code: Error: Left value variable (dum
my) not found in the scope.

stderr | tests/components-core/scripts-runner/process-state
ment-asgn.test.ts > Process statements - assignments (exp)
> cannot assign to non-defined variable (*=) - async
Error while executing code: Error: Left value variable (dum
my) not found in the scope.

stderr | tests/components-core/scripts-runner/process-state
ment-asgn.test.ts > Process statements - assignments (exp)
> cannot assign to non-defined variable (/=) - async
Error while executing code: Error: Left value variable (dum
my) not found in the scope.

stderr | tests/components-core/scripts-runner/process-state
ment-asgn.test.ts > Process statements - assignments (exp)
> cannot assign to non-defined variable (%=) - async
Error while executing code: Error: Left value variable (dum
my) not found in the scope.

stderr | tests/components-core/scripts-runner/process-state
ment-asgn.test.ts > Process statements - assignments (exp)
> cannot assign to non-defined variable (<<=) - async
Error while executing code: Error: Left value variable (dum
my) not found in the scope.

stderr | tests/components-core/scripts-runner/process-state
ment-asgn.test.ts > Process statements - assignments (exp)
> cannot assign to non-defined variable (>>=) - async
Error while executing code: Error: Left value variable (dum
my) not found in the scope.

stderr | tests/components-core/scripts-runner/process-state
ment-asgn.test.ts > Process statements - assignments (exp)
> cannot assign to non-defined variable (>>>=) - async
Error while executing code: Error: Left value variable (dum
my) not found in the scope.

stderr | tests/components-core/scripts-runner/process-state
ment-asgn.test.ts > Process statements - assignments (exp)
> cannot assign to non-defined variable (&=) - async
Error while executing code: Error: Left value variable (dum
my) not found in the scope.

stderr | tests/components-core/scripts-runner/process-state
ment-asgn.test.ts > Process statements - assignments (exp)
> cannot assign to non-defined variable (^=) - async
Error while executing code: Error: Left value variable (dum
my) not found in the scope.

stderr | tests/components-core/scripts-runner/process-state
ment-asgn.test.ts > Process statements - assignments (exp)
> cannot assign to non-defined variable (|=) - async
Error while executing code: Error: Left value variable (dum
my) not found in the scope.

stderr | tests/components-core/scripts-runner/process-state
ment-asgn.test.ts > Process statements - assignments (exp)
> cannot assign to non-defined variable (&&=) - async
Error while executing code: Error: Left value variable (dum
my) not found in the scope.

stderr | tests/components-core/scripts-runner/process-state
ment-asgn.test.ts > Process statements - assignments (exp)
> cannot assign to non-defined variable (||=) - async
Error while executing code: Error: Left value variable (dum
my) not found in the scope.

stderr | tests/components-core/scripts-runner/process-state
ment-asgn.test.ts > Process statements - assignments (exp)
> cannot assign to non-defined variable (??=) - async
Error while executing code: Error: Left value variable (dum
my) not found in the scope.


 ✓ tests/components-core/scripts-runner/process-statement-a
sgn.test.ts (32 tests) 13ms

stderr | tests/components-core/scripts-runner/bannedMembers
.test.ts > Eval-tree integration — warn mode > allows acces
s to a banned global identifier (warn mode)
[XMLUI sandbox] DOM API access to 'window.__xmlui_sandbox_t
est__' is not allowed in XMLUI expressions. Use the managed
 alternative.

stderr | tests/components-core/scripts-runner/bannedMembers
.test.ts > Default behaviour (strictDomSandbox not set) > a
llows access to a banned entry when strictDomSandbox is not
 set (default warn)
[XMLUI sandbox] DOM API access to 'window.__xmlui_sandbox_t
est__' is not allowed in XMLUI expressions.


 ✓ tests/components-core/scripts-runner/bannedMembers.test.
ts (38 tests) 11ms
 ✓ tests/parsers/xmlui/transform.errors.test.ts (22 tests)
12ms

 ✓ tests/components-core/action/callApi-mockExecute.test.ts
 (7 tests) 11ms

 ✓ tests/components-core/theming/border-segments.test.ts (6
8 tests) 9ms


 ✓ tests/parsers/xmlui/transform.regression.test.ts (9 test
s) 10ms
 ✓ tests/language-server/services/completion.test.ts (22 te
sts | 1 todo) 10ms
 ✓ tests/parsers/scripting/module-with-imports.test.ts (18
tests) 10ms
 ✓ tests/parsers/xmlui/scanner.test.ts (120 tests) 10ms
stderr | tests/components-core/scripts-runner/async-await-e
rrors.test.ts > Async/Await Error Handling > Async function
 declaration errors > should throw error for async function
 declaration
Error while executing code: Error: XMLUI does not support a
sync function declarations.

stderr | tests/components-core/scripts-runner/async-await-e
rrors.test.ts > Async/Await Error Handling > Async function
 declaration errors > should throw error for async function
 with parameters
Error while executing code: Error: XMLUI does not support a
sync function declarations.

stderr | tests/components-core/scripts-runner/async-await-e
rrors.test.ts > Async/Await Error Handling > Async function
 declaration errors > should throw error for nested async f
unction
Error while executing code: Error: XMLUI does not support a
sync function declarations.
Error while executing code: Error: XMLUI does not support a
sync function declarations.

 ✓ tests/components-core/scripts-runner/eval-tree-func-decl
.test.ts (12 tests) 11ms
stderr | tests/components-core/scripts-runner/async-await-e
rrors.test.ts > Async/Await Error Handling > Await expressi
on errors > should throw error for await in return statemen
t
Error while executing code: Error: XMLUI does not support t
he await operator.

stderr | tests/components-core/scripts-runner/async-await-e
rrors.test.ts > Async/Await Error Handling > Await expressi
on errors > should throw error for await in variable declar
ation
Error while executing code: Error: XMLUI does not support t
he await operator.

stderr | tests/components-core/scripts-runner/async-await-e
rrors.test.ts > Async/Await Error Handling > Combined async
/await errors > should throw error for async function with
await in body
Error while executing code: Error: XMLUI does not support a
sync function declarations.

stderr | tests/components-core/scripts-runner/async-await-e
rrors.test.ts > Async/Await Error Handling > Combined async
/await errors > should throw error for async arrow function
Error while executing code: Error: XMLUI does not support a
sync arrow functions.

stderr | tests/components-core/scripts-runner/async-await-e
rrors.test.ts > Async/Await Error Handling > Combined async
/await errors > should throw error for async function expre
ssion
Error while executing code: Error: XMLUI does not support a
sync arrow functions.

stderr | tests/components-core/scripts-runner/async-await-e
rrors.test.ts > Async/Await Error Handling > Combined async
/await errors > should throw error for async IIFE
Error while executing code: Error: XMLUI does not support a
sync arrow functions.

stderr | tests/components-core/scripts-runner/async-await-e
rrors.test.ts > Async/Await Error Handling > Combined async
/await errors > should throw error for async IIFE with body
Error while executing code: Error: XMLUI does not support a
sync arrow functions.

 ✓ tests/components-core/scripts-runner/async-await-errors.
test.ts (19 tests) 14ms
 ✓ tests/components-core/scripts-runner/phase3-globals.test
.ts (28 tests) 13ms
 ✓ tests/components-core/type-contracts/verifier.test.ts (2
9 tests) 7ms
stderr | tests/components-core/scripts-runner/eval-tree-pre
-post.test.ts > Evaluate prefix/postfix expressions (exp) >
 cannot apply '++dummy' to non-defined variable - sync
Error while executing code: Error: Left value variable (dum
my) not found in the scope.

stderr | tests/components-core/scripts-runner/eval-tree-pre
-post.test.ts > Evaluate prefix/postfix expressions (exp) >
 cannot apply '--dummy' to non-defined variable - sync
Error while executing code: Error: Left value variable (dum
my) not found in the scope.

stderr | tests/components-core/scripts-runner/eval-tree-pre
-post.test.ts > Evaluate prefix/postfix expressions (exp) >
 cannot apply 'dummy++' to non-defined variable - sync
Error while executing code: Error: Left value variable (dum
my) not found in the scope.

stderr | tests/components-core/scripts-runner/eval-tree-pre
-post.test.ts > Evaluate prefix/postfix expressions (exp) >
 cannot apply 'dummy--' to non-defined variable - sync
Error while executing code: Error: Left value variable (dum
my) not found in the scope.

stderr | tests/components-core/scripts-runner/eval-tree-pre
-post.test.ts > Evaluate prefix/postfix expressions (exp) >
 cannot apply '++dummy' to non-defined variable - async
Error while executing code: Error: Left value variable (dum
my) not found in the scope.

stderr | tests/components-core/scripts-runner/eval-tree-pre
-post.test.ts > Evaluate prefix/postfix expressions (exp) >
 cannot apply '--dummy' to non-defined variable - async
Error while executing code: Error: Left value variable (dum
my) not found in the scope.

stderr | tests/components-core/scripts-runner/eval-tree-pre
-post.test.ts > Evaluate prefix/postfix expressions (exp) >
 cannot apply 'dummy++' to non-defined variable - async
Error while executing code: Error: Left value variable (dum
my) not found in the scope.

stderr | tests/components-core/scripts-runner/eval-tree-pre
-post.test.ts > Evaluate prefix/postfix expressions (exp) >
 cannot apply 'dummy--' to non-defined variable - async
Error while executing code: Error: Left value variable (dum
my) not found in the scope.

 ✓ tests/components-core/scripts-runner/eval-tree-pre-post.
test.ts (25 tests) 10ms
 ✓ tests/parsers/scripting/parser-source-text.test.ts (26 t
ests) 10ms
 ✓ tests/components-core/theming/responsive-layout.test.ts
(91 tests) 12ms
 ✓ tests/components-core/scripts-runner/eval-tree-arrow-asy
nc.test.ts (11 tests) 9ms
 ✓ tests/parsers/xmlui/transform.global.test.ts (26 tests)
12ms
 ✓ tests/parsers/xmlui/lint.test.ts (15 tests) 11ms
 ✓ tests/parsers/scripting/parser-unary.test.ts (54 tests)
13ms
 ✓ tests/parsers/scripting/parser-new-operator.test.ts (33
tests) 10ms
 ✓ tests/components-core/analyzer/rules/id-unknown-prop-eve
nt.test.ts (14 tests) 5ms
 ✓ tests/parsers/style-parser/parser.test.ts (50 tests) 7ms
 ✓ tests/parsers/scripting/parser-expressions.test.ts (43 t
ests) 8ms
 ✓ tests/components-core/scripts-runner/function-proxy.test
.ts (7 tests) 8ms
 ✓ tests/parsers/xmlui/transform.escape.test.ts (17 tests)
7ms
stderr | tests/components-core/lifecycle/dispatcher.test.ts
 > createLifecycleDispatcher > async unmount handler report
s a violation but resolves
Lifecycle violation on 'uid-a': async 'unmount' handler is
not awaited (React commits unmount synchronously). Use 'onB
eforeDispose' for async flush. undefined

stderr | tests/components-core/lifecycle/dispatcher.test.ts
 > createLifecycleDispatcher > throwing handler reports a v
iolation and continues
Lifecycle violation on 'uid-a': 'mount' handler threw. Erro
r: nope
    at /Users/yurii/projects/nsoftware/xmlui-monorepo/xmlui
/tests/components-core/lifecycle/dispatcher.test.ts:93:13
    at Object.fire (/Users/yurii/projects/nsoftware/xmlui-m
onorepo/xmlui/src/components-core/lifecycle/dispatcher.ts:7
2:26)
    at /Users/yurii/projects/nsoftware/xmlui-monorepo/xmlui
/tests/components-core/lifecycle/dispatcher.test.ts:98:13
    at file:///Users/yurii/projects/nsoftware/xmlui-monorep
o/node_modules/@vitest/runner/dist/chunk-artifact.js:302:11
    at file:///Users/yurii/projects/nsoftware/xmlui-monorep
o/node_modules/@vitest/runner/dist/chunk-artifact.js:1903:2
6
    at file:///Users/yurii/projects/nsoftware/xmlui-monorep
o/node_modules/@vitest/runner/dist/chunk-artifact.js:2326:2
0
    at new Promise (<anonymous>)
    at runWithCancel (file:///Users/yurii/projects/nsoftwar
e/xmlui-monorepo/node_modules/@vitest/runner/dist/chunk-art
ifact.js:2323:10)
    at file:///Users/yurii/projects/nsoftware/xmlui-monorep
o/node_modules/@vitest/runner/dist/chunk-artifact.js:2305:2
0
    at new Promise (<anonymous>)

stderr | tests/components-core/lifecycle/dispatcher.test.ts
 > trace helpers > reportLifecycleViolation defaults to war
n severity
Lifecycle violation on 'x': 'mount' handler threw. Error: b
oom
    at /Users/yurii/projects/nsoftware/xmlui-monorepo/xmlui
/tests/components-core/lifecycle/dispatcher.test.ts:132:14
    at file:///Users/yurii/projects/nsoftware/xmlui-monorep
o/node_modules/@vitest/runner/dist/chunk-artifact.js:302:11
    at file:///Users/yurii/projects/nsoftware/xmlui-monorep
o/node_modules/@vitest/runner/dist/chunk-artifact.js:1903:2
6
    at file:///Users/yurii/projects/nsoftware/xmlui-monorep
o/node_modules/@vitest/runner/dist/chunk-artifact.js:2326:2
0
    at new Promise (<anonymous>)
    at runWithCancel (file:///Users/yurii/projects/nsoftwar
e/xmlui-monorepo/node_modules/@vitest/runner/dist/chunk-art
ifact.js:2323:10)
    at file:///Users/yurii/projects/nsoftware/xmlui-monorep
o/node_modules/@vitest/runner/dist/chunk-artifact.js:2305:2
0
    at new Promise (<anonymous>)
    at runWithTimeout (file:///Users/yurii/projects/nsoftwa
re/xmlui-monorepo/node_modules/@vitest/runner/dist/chunk-ar
tifact.js:2272:10)
    at file:///Users/yurii/projects/nsoftware/xmlui-monorep
o/node_modules/@vitest/runner/dist/chunk-artifact.js:2955:6
4

stderr | tests/components-core/lifecycle/dispatcher.test.ts
 > trace helpers > reportLifecycleViolation strict mode emi
ts error severity
Lifecycle violation on 'x': async 'unmount' handler is not
awaited (React commits unmount synchronously). Use 'onBefor
eDispose' for async flush. undefined

stderr | tests/components-core/lifecycle/dispatcher.test.ts
 > trace helpers > returned violation is an instance of Lif
ecycleViolationError
Lifecycle violation on 'x': 'mount' handler threw. undefine
d

 ✓ tests/components-core/lifecycle/dispatcher.test.ts (14 t
ests) 7ms
 ✓ tests/parsers/scripting/parser-async-await.test.ts (28 t
ests) 8ms
 ✓ tests/components/CodeBlock/hightlight-code.test.ts (56 t
ests) 8ms
 ✓ tests/components-core/inspectorUtils.test.ts (43 tests)
8ms
 ✓ tests/components-core/RestApiProxy.uploadProgress.test.t
s (5 tests) 10ms
 ✓ tests/components-core/scripts-runner/eval-tree-arrow.tes
t.ts (11 tests) 8ms
 ✓ tests/bin/vite-plugin-import.test.ts (27 tests) 6ms
 ✓ tests/parsers/scripting/function-proxy.test.ts (7 tests)
 11ms
stderr | tests/components-core/wrapComponent.test.tsx > wra
pComponent — renderers (render-prop) > creates a render-pro
p callback with positional context vars
[XMLUI Lexical Scoping] Component Test injected variables (
$item, $selectedValue, $inTrigger) into its template, but t
hey are NOT declared in its childInjectedVars metadata. Thi
s will cause the variables to be stripped during AST optimi
zation. Please add them to the component's metadata.

stderr | tests/components-core/wrapComponent.test.tsx > wra
pComponent — renderers (render-prop) > uses function form f
or computed context vars
[XMLUI Lexical Scoping] Component Test injected variables (
$item, $itemIndex, $isFirst, $isLast, $isSelected) into its
 template, but they are NOT declared in its childInjectedVa
rs metadata. This will cause the variables to be stripped d
uring AST optimization. Please add them to the component's
metadata.

stderr | tests/components-core/wrapComponent.test.tsx > wra
pComponent — renderers (render-prop) > null in positional c
ontextVars skips that argument
[XMLUI Lexical Scoping] Component Test injected variables (
$item, $index) into its template, but they are NOT declared
 in its childInjectedVars metadata. This will cause the var
iables to be stripped during AST optimization. Please add t
hem to the component's metadata.

 ✓ tests/components-core/wrapComponent.test.tsx (14 tests)
7ms
 ✓ tests/language-server/services/folding.test.ts (24 tests
) 9ms
 ✓ tests/parsers/xmlui/transform.attr.test.ts (14 tests) 7m
s
 ✓ tests/components-core/scripts-runner/eval-tree-new-opera
tor.test.ts (16 tests) 7ms
stdout | tests/components-core/scripts-runner/process-event
.test.ts > Process statements (exp) > Event issue
0

stdout | tests/components-core/scripts-runner/process-event
.test.ts > Process statements (exp) > Event issue
1

stdout | tests/components-core/scripts-runner/process-event
.test.ts > Process statements (exp) > Event issue
2

 ✓ tests/components-core/scripts-runner/process-event.test.
ts (2 tests) 7ms
 ✓ tests/parsers/scripting/parser-destructuring.test.ts (23
 tests) 7ms
 ✓ tests/components-core/reactive-graph/collectComponentDef
Graph.test.ts (10 tests) 9ms
 ✓ tests/parsers/scripting/import-position.test.ts (19 test
s) 8ms
 ✓ tests/parsers/scripting/parser-binary.test.ts (45 tests)
 7ms
 ✓ tests/components-core/scripts-runner/phase2-globals.test
.ts (40 tests) 8ms
stdout | tests/parsers/scripting/process-event.test.ts > Pr
ocess statements > Event issue
0

stdout | tests/parsers/scripting/process-event.test.ts > Pr
ocess statements > Event issue
1

stdout | tests/parsers/scripting/process-event.test.ts > Pr
ocess statements > Event issue
2

 ✓ tests/parsers/scripting/process-event.test.ts (2 tests)
7ms
 ✓ tests/components-core/theming/padding-segments.test.ts (
42 tests) 5ms
 ✓ tests/components-core/theming/component-layout.resolver.
test.ts (70 tests) 7ms
 ✓ tests/parsers/scripting/eval-tree-pre-post.test.ts (17 t
ests) 7ms
 ✓ tests/components-core/optimization/computedUses.test.ts
(95 tests) 20ms
 ✓ tests/parsers/scripting/import-parse-alias.test.ts (15 t
ests) 7ms
 ✓ tests/components/Table/Table-keyboard-actions.test.ts (1
9 tests) 5ms
 ✓ tests/components-core/scripts-runner/process-function.te
st.ts (4 tests) 8ms
 ✓ tests/parsers/scripting/ast-import.test.ts (9 tests) 8ms
 ✓ tests/parsers/scripting/import-parse-basic.test.ts (13 t
ests) 7ms
 ✓ tests/parsers/scripting/import-parse-multiple.test.ts (1
4 tests) 8ms
 ✓ tests/components-core/utils/resolveResponsiveWhen.test.t
s (29 tests) 5ms
 ✓ tests/keybinding-parser.test.ts (56 tests) 7ms
 ✓ tests/components-core/concurrency/token.test.ts (14 test
s) 5ms
 ✓ tests/components-core/type-contracts/rules/rules.test.ts
 (74 tests) 5ms
 ✓ tests/components-core/theming/layout-property-parser.tes
t.ts (75 tests) 6ms
 ✓ tests/components-core/local-storage-functions.test.ts (2
2 tests) 7ms
 ✓ tests/parsers/xmlui/transform.warnings.test.ts (8 tests)
 7ms
 ✓ tests/parsers/scripting/parser-errors.test.ts (38 tests)
 6ms
 ✓ tests/components-core/analyzer/walker.test.ts (11 tests)
 5ms
 ✓ tests/components-core/scripts-runner/AttributeValueParse
r.test.ts (12 tests) 7ms
 ✓ tests/parsers/xmlui/transform.circular.test.ts (1 test)
6ms
 ✓ tests/components-core/scripts-runner/appStateSchema.test
.ts (12 tests) 7ms
 ✓ tests/components-core/pubsub/PubSubService.test.ts (12 t
ests) 5ms
 ✓ tests/components-core/accessibility/linter.test.ts (22 t
ests) 5ms
 ✓ tests/parsers/scripting/parser-primary.test.ts (15 tests
) 7ms
 ✓ tests/parsers/scripting/lexer-import.test.ts (22 tests)
5ms
 ✓ tests/components-core/RestApiProxy.transactionId.test.ts
 (7 tests) 4ms
 ✓ tests/components-core/standalone-import.test.ts (33 test
s) 5ms
 ✓ tests/components-core/interception/ReadOnlyCollection.te
st.ts (36 tests) 6ms
 ✓ tests/parsers/scripting/process-implicit-context.test.ts
 (2 tests) 5ms
 ✓ tests/components-core/scripts-runner/process-implicit-co
ntext.test.ts (2 tests) 5ms
 ✓ tests/components-core/behaviors/behaviorConditionEvaluat
or.test.ts (57 tests) 5ms
 ✓ tests/parsers/scripting/circular-import.test.ts (18 test
s) 5ms
 ✓ tests/components-core/audit/correlation.test.ts (14 test
s) 7ms
 ✓ tests/components-core/scripts-runner/eval-tree-regressio
n.test.ts (4 tests) 5ms
 ✓ tests/components-core/analyzer/rules/_utils.test.ts (21
tests) 5ms
 ✓ tests/components-core/rendering/buildProxy.test.ts (16 t
ests) 5ms
 ✓ tests/parsers/parameter-parser.test.ts (9 tests) 5ms
 ✓ tests/parsers/scripting/module-parse.test.ts (3 tests) 6
ms
 ✓ tests/parsers/paremeter-parser.test.ts (9 tests) 5ms
 ✓ tests/parsers/scripting/module-resolver.test.ts (38 test
s) 6ms
 ✓ tests/components-core/analyzer/rules/expr-rules.test.ts
(13 tests) 4ms
 ✓ tests/components-core/errors/app-error.test.ts (23 tests
) 4ms
 ✓ tests/components-core/rendering/ContainerUtils.test.ts (
28 tests) 5ms
 ✓ tests/language-server/services/hover.test.ts (5 tests) 4
ms
 ✓ tests/components-core/theming/layout-resolver2.test.ts (
23 tests) 4ms
 ✓ tests/components-core/rendering/collectFnVarDeps.test.ts
 (11 tests) 4ms
 ✓ tests/components-core/rendering/stateComposition.test.ts
 (15 tests) 4ms
 ✓ tests/abstractions/layout-context-utils.test.ts (28 test
s) 4ms
 ✓ tests/components-core/type-contracts/rules/coerce.test.t
s (9 tests) 4ms
 ✓ tests/parsers/xmlui/transform.test.ts (2 tests) 4ms
 ✓ tests/components-core/scripts-runner/navigateBlank.test.
ts (9 tests) 4ms
 ✓ tests/components-core/audit/metadata-rules.test.ts (16 t
ests) 6ms
 ✓ tests/components-core/optimization/validateInjectedVars.
test.ts (30 tests) 5ms
 ✓ tests/components-core/analyzer/rules/id-unknown-componen
t.test.ts (9 tests) 6ms
 ✓ tests/components-core/RestApiProxy.resolveUrl.test.ts (1
2 tests) 4ms
 ✓ tests/parsers/markdown/parse-binding-expression.test.ts
(19 tests) 5ms
 ✓ tests/components-core/reactive-graph/diagnostics.test.ts
 (8 tests) 4ms
 ✓ tests/components/TileGrid/TileGrid-keyboard-navigation.t
est.ts (23 tests) 4ms
 ✓ tests/parsers/scripting/parser-assignments.test.ts (1 te
st) 4ms
 ✓ tests/components-core/interception/request-param-convert
er.test.ts (16 tests) 4ms
 ✓ tests/language-server/project.test.ts (4 tests) 5ms
 ✓ tests/components-core/type-contracts/suggestions.test.ts
 (12 tests) 3ms
 ✓ tests/components-core/reactive-graph/findCycles.test.ts
(8 tests) 4ms
 ✓ tests/components-core/behaviors/PubSubBehavior.test.ts (
10 tests) 3ms
 ✓ tests/components-core/scripts-runner/parser-regression.t
est.ts (1 test) 3ms
 ✓ tests/components-core/inspector-logging.test.ts (5 tests
) 3ms
 ✓ tests/components-core/audit/policy.test.ts (6 tests) 3ms
 ✓ tests/parsers/style-parser/parseHVar.test.ts (7 tests) 3
ms
 ✓ tests/components-core/interception/orderBy.test.ts (12 t
ests) 4ms
 ✓ tests/parsers/common/input-stream.test.ts (9 tests) 3ms
 ✓ tests/components-core/container/buildProxy.test.ts (4 te
sts) 4ms
 ✓ tests/components-core/reactive-graph/graph.test.ts (7 te
sts) 3ms
 ✓ tests/components-core/global-variables-runtime.test.ts (
5 tests) 3ms
 ✓ tests/components-core/xmluiMarkupToComponent.test.ts (1
test) 3ms
 ✓ tests/components/Tree/Tree-states.test.ts (6 tests) 2ms
 ✓ tests/components-core/abstractions/treeAbstractions.test
.ts (3 tests) 2ms
 ✓ tests/components-core/utils/LruCache.test.ts (4 tests |
2 skipped) 2ms
 ✓ tests/parsers/style-parser/generateHvarChain.test.ts (2
tests) 2ms

 Test Files  177 passed (177)
      Tests  9656 passed | 2 skipped | 1 todo (9659)
   Start at  11:15:25
   Duration  26.08s (transform 13.29s, setup 33.26s, import
 67.04s, tests 5.29s, environment 155.80s)
└─ xmlui#test:unit ──
┌─ //#_e2e > cache miss, executing beb55a956f4e97db
cache miss, executing beb55a956f4e97db


> xmlui-root@1.0.0 _e2e
> cross-env PLAYWRIGHT_USE_DEV_SERVER=false playwright test
[WebServer] (node:68277) [DEP0040] DeprecationWarning: The
`punycode` module is deprecated. Please use a userland alte
rnative instead.
[WebServer] (Use `node --trace-deprecation ...` to show whe
re the warning was created)


Running 6922 tests using 9 workers
  1) [xmlui-nonsmoke] › xmlui/src/components/ModalDialog/Mo
dalDialog.spec.ts:65:3 › Open/Close › Preserves $item conte
xt variable from Table Column

    Error: expect(locator).toContainText(expected) failed

    Locator: getByTestId('dialog')
    Expected substring: "Acme Corp"
    Received string:    "close"
    Timeout: 10000ms

    Call log:
      - Expect "toContainText" with timeout 10000ms
      - waiting for getByTestId('dialog')
        14 × locator resolved to <div role="dialog" tabinde
x="-1" id="radix-:r2r4:" data-state="open" data-testid="dia
log" data-part-id="content" aria-labelledby="radix-:r2r5:"
aria-describedby="radix-:r2r6:" data-component-type="ModalD
ialog" class="_content_nc6kd_28 css-12r7rf0 css-1rbf16h">…<
/div>
           - unexpected value "close"


      81 |     const modal = page.getByTestId("dialog");
      82 |     await expect(modal).toBeVisible();
    > 83 |     await expect(modal).toContainText("Acme Corp
");
         |                         ^
      84 |   });
      85 |
      86 |   test("Declarative open/close", async ({ page,
initTestBed }) => {
        at /Users/yurii/projects/nsoftware/xmlui-monorepo/x
mlui/src/components/ModalDialog/ModalDialog.spec.ts:83:25

    Error Context: test-results/src-components-ModalDialog-
0df0d--variable-from-Table-Column-xmlui-nonsmoke/error-cont
ext.md

    Retry #1 ──────────────────────────────────────────────

    Error: expect(locator).toContainText(expected) failed

    Locator: getByTestId('dialog')
    Expected substring: "Acme Corp"
    Received string:    "close"
    Timeout: 10000ms

    Call log:
      - Expect "toContainText" with timeout 10000ms
      - waiting for getByTestId('dialog')
        14 × locator resolved to <div role="dialog" tabinde
x="-1" id="radix-:rf:" data-state="open" data-testid="dialo
g" data-part-id="content" aria-labelledby="radix-:rg:" aria
-describedby="radix-:rh:" data-component-type="ModalDialog"
 class="_content_nc6kd_28 css-12r7rf0 css-1rbf16h">…</div>
           - unexpected value "close"


      81 |     const modal = page.getByTestId("dialog");
      82 |     await expect(modal).toBeVisible();
    > 83 |     await expect(modal).toContainText("Acme Corp
");
         |                         ^
      84 |   });
      85 |
      86 |   test("Declarative open/close", async ({ page,
initTestBed }) => {
        at /Users/yurii/projects/nsoftware/xmlui-monorepo/x
mlui/src/components/ModalDialog/ModalDialog.spec.ts:83:25

    Error Context: test-results/src-components-ModalDialog-
0df0d--variable-from-Table-Column-xmlui-nonsmoke-retry1/err
or-context.md

    attachment #2: trace (application/zip) ────────────────
    test-results/src-components-ModalDialog-0df0d--variable
-from-Table-Column-xmlui-nonsmoke-retry1/trace.zip
    Usage:

        npx playwright show-trace test-results/src-componen
ts-ModalDialog-0df0d--variable-from-Table-Column-xmlui-nons
moke-retry1/trace.zip

    ───────────────────────────────────────────────────────

…ts a warning group when two sibling components share an id
[xmlui] Warnings in markup:
  Duplicate component id "dup" detected at line 6, column 1
7. Component ids must be unique within the same markup.
…warning › warning message contains the duplicated id value
[xmlui] Warnings in markup:
  Duplicate component id "my-unique-id" detected at line 6,
 column 19. Component ids must be unique within the same ma
rkup.
…emits a warning for each extra occurrence beyond the first
[xmlui] Warnings in markup:
  Duplicate component id "triple" detected at line 6, colum
n 17. Component ids must be unique within the same markup.
  Duplicate component id "triple" detected at line 7, colum
n 17. Component ids must be unique within the same markup.
… warning when a nested component duplicates an ancestor id
[xmlui] Warnings in markup:
  Duplicate component id "container" detected at line 5, co
lumn 17. Component ids must be unique within the same marku
p.
  2) [xmlui-nonsmoke] › xmlui/src/components-core/behaviors
/FormBindingBehavior.spec.ts:828:3 › Validation › 'required
' validation shows error when isDirty and losing focus

    Error: expect(locator).toBeVisible() failed

    Locator: getByText('This field is required')
    Expected: visible
    Timeout: 10000ms
    Error: element(s) not found

    Call log:
      - Expect "toBeVisible" with timeout 10000ms
      - waiting for getByText('This field is required')


      857 |
      858 |     // Wait for validation error message to app
ear
    > 859 |     await expect(page.getByText("This field is
required")).toBeVisible();
          |
            ^
      860 |   });
      861 |
      862 |   test("'required' validation shows error on fo
rm submit (like FormItem)", async ({
        at /Users/yurii/projects/nsoftware/xmlui-monorepo/x
mlui/src/components-core/behaviors/FormBindingBehavior.spec
.ts:859:60

    Error Context: test-results/src-components-core-behavi-
a1ed6-en-isDirty-and-losing-focus-xmlui-nonsmoke/error-cont
ext.md

  3) [xmlui-nonsmoke] › xmlui/tests-e2e/how-to-examples/mar
kup.spec.ts:15:3 › A complex JSON object › filling station
name and submitting shows it in the output @website

    Error: expect(locator).toContainText(expected) failed

    Locator: locator('textarea')
    Expected substring: "Liverpool"
    Error: strict mode violation: locator('textarea') resol
ved to 2 elements:
        1) <textarea rows="2" id=":r84l:" name=":r84l:" pla
ceholder="" autocomplete="off" data-part-id="input" aria-mu
ltiline="true" aria-readonly="false" data-testid="preview"
class="_textarea_1eyhb_14" data-component-type="TextArea">{
"station":"Liverpool","wifi":true,"toilets":fals…</textarea
> aka getByText('{"station":"Liverpool","wifi')
        2) <textarea tabindex="-1" aria-hidden="true"></tex
tarea> aka locator('textarea').nth(1)

    Call log:
      - Expect "toContainText" with timeout 10000ms
      - waiting for locator('textarea')


      17 |     await page.locator('input[type="text"]').fil
l("Liverpool");
      18 |     await page.locator('button[type="submit"]').
click();
    > 19 |     await expect(page.locator("textarea")).toCon
tainText("Liverpool");
         |                                            ^
      20 |   });
      21 | });
      22 |
        at /Users/yurii/projects/nsoftware/xmlui-monorepo/x
mlui/tests-e2e/how-to-examples/markup.spec.ts:19:44

    Error Context: test-results/tests-e2e-how-to-examples--
f8e90-ting-shows-it-in-the-output-xmlui-nonsmoke/error-cont
ext.md

  4) [xmlui-nonsmoke] › xmlui/tests-e2e/how-to-examples/con
trol-cache-invalidation.spec.ts:27:3 › Update user - refres
hes user list › promoting a user refreshes users but not st
ats @website

    Error: expect(locator).toBeVisible() failed

    Locator: getByText('Stats fetched: 1 time(s)')
    Expected: visible
    Timeout: 10000ms
    Error: element(s) not found

    Call log:
      - Expect "toBeVisible" with timeout 10000ms
      - waiting for getByText('Stats fetched: 1 time(s)')


      32 |       .toBe(true);
      33 |     // stats counter should NOT have incremented
    > 34 |     await expect(page.getByText("Stats fetched:
1 time(s)")).toBeVisible();
         |
             ^
      35 |   });
      36 |
      37 |   test("promoted user button becomes disabled",
async ({ initTestBed, page }) => {
        at /Users/yurii/projects/nsoftware/xmlui-monorepo/x
mlui/tests-e2e/how-to-examples/control-cache-invalidation.s
pec.ts:34:62

    Error Context: test-results/tests-e2e-how-to-examples--
9b012-freshes-users-but-not-stats-xmlui-nonsmoke/error-cont
ext.md

  5) [xmlui-nonsmoke] › xmlui/tests-e2e/how-to-examples/run
-a-one-time-action-on-page-load.spec.ts:26:3 › One-time pag
e load action › onInit fires on mount and the initialized c
ard appears @website

    Error: expect(locator).toBeVisible() failed

    Locator: getByText(/Page initialized at \d/)
    Expected: visible
    Timeout: 10000ms
    Error: element(s) not found

    Call log:
      - Expect "toBeVisible" with timeout 10000ms
      - waiting for getByText(/Page initialized at \d/)



        at /Users/yurii/projects/nsoftware/xmlui-monorepo/x
mlui/tests-e2e/how-to-examples/run-a-one-time-action-on-pag
e-load.spec.ts:34:60

    Error Context: test-results/tests-e2e-how-to-examples--
2e338-he-initialized-card-appears-xmlui-nonsmoke/error-cont
ext.md

  6) [xmlui-nonsmoke] › xmlui/tests-e2e/how-to-examples/hid
e-an-element-until-its-datasource-is-ready.spec.ts:39:3 › S
how content only after the DataSource loads › result text a
ppears and button re-enables after the fetch completes @web
site

    Error: expect(locator).toBeEnabled() failed

    Locator:  getByRole('button', { name: 'Run (takes about
 3s)' })
    Expected: enabled
    Received: disabled
    Timeout:  10000ms

    Call log:
      - Expect "toBeEnabled" with timeout 10000ms
      - waiting for getByRole('button', { name: 'Run (takes
 about 3s)' })
        14 × locator resolved to <button disabled type="but
ton" class="_button_15rdj_14 _buttonHorizontal_15rdj_39 _sm
_15rdj_49 _solidPrimary_15rdj_104 css-o7p4hm css-1rbf16h cs
s-o7p4hm css-1rbf16h">Run (takes about 3s)</button>
           - unexpected value "disabled"


      46 |       .poll(() => page.getByText("Fruits: 3 foun
d").isVisible(), { timeout: 8000 })
      47 |       .toBe(true);
    > 48 |     await expect(page.getByRole("button", { name
: "Run (takes about 3s)" })).toBeEnabled();
         |
                             ^
      49 |   });
      50 | });
      51 |
        at /Users/yurii/projects/nsoftware/xmlui-monorepo/x
mlui/tests-e2e/how-to-examples/hide-an-element-until-its-da
tasource-is-ready.spec.ts:48:78

    Error Context: test-results/tests-e2e-how-to-examples--
8b04e-s-after-the-fetch-completes-xmlui-nonsmoke/error-cont
ext.md

  1 failed
    [xmlui-nonsmoke] › xmlui/src/components/ModalDialog/Mod
alDialog.spec.ts:65:3 › Open/Close › Preserves $item contex
t variable from Table Column
  5 flaky
    [xmlui-nonsmoke] › xmlui/src/components-core/behaviors/
FormBindingBehavior.spec.ts:828:3 › Validation › 'required'
 validation shows error when isDirty and losing focus
    [xmlui-nonsmoke] › xmlui/tests-e2e/how-to-examples/cont
rol-cache-invalidation.spec.ts:27:3 › Update user - refresh
es user list › promoting a user refreshes users but not sta
ts @website
    [xmlui-nonsmoke] › xmlui/tests-e2e/how-to-examples/hide
-an-element-until-its-datasource-is-ready.spec.ts:39:3 › Sh
ow content only after the DataSource loads › result text ap
pears and button re-enables after the fetch completes @webs
ite
    [xmlui-nonsmoke] › xmlui/tests-e2e/how-to-examples/mark
up.spec.ts:15:3 › A complex JSON object › filling station n
ame and submitting shows it in the output @website
    [xmlui-nonsmoke] › xmlui/tests-e2e/how-to-examples/run-
a-one-time-action-on-page-load.spec.ts:26:3 › One-time page
 load action › onInit fires on mount and the initialized ca
rd appears @website
  66 skipped
  6850 passed (3.8m)

To open last HTML report run:

  npx playwright show-report
└─ //#_e2e ──

 Tasks:    13 successful, 14 total
Cached:    0 cached, 14 total
  Time:    4m22.215s
Failed:    //#_e2e


~/projects/nsoftware/xmlui-monorepo yurii/computedUses* ⇡ 4m 23s
❯
